--- a/resources/style.css
+++ b/resources/style.css
@@ -5,7 +5,6 @@ html {
 }
 
 body {
-  border: 1px solid black;
   font-family: "helvetica", sans-serif;
   line-height: 1.4;
 }
@@ -15,7 +14,7 @@ h1 {
 }
 
 .container {
-  border: 1px solid red;
+
 }
 
 .container {
@@ -35,7 +34,7 @@ h1 {
 }
 
 .header {
-  width: 960px;
+  min-width: 960px;
   margin: 0 auto;
   background-color: cadetblue;
   color: white;
@@ -82,6 +81,101 @@ li {
   left: 34%;
 }
 
+@media only screen and (max-width: 1024px) {
+  .header{
+  }
+  .banner {
+
+  }
+}
+
+@media only screen and (max-width: 700px)
+{
+  .nav-header {
+    display: none;
+  }
+  .short-menu {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+     .header {
+      min-width: 100%;
+    }
+    .logo-p {
+      display: none;
+    }
+    .banner {
+      background-position: 20%;
+      height: 17rem;
+    }
+    .in-banner-headline {
+      text-align: center;
+      line-height: 1.5;
+      padding: 1rem;
+      margin-top: 9rem;
+      position: inherit;
+
+    }
+    h1 {
+      font-size: 1rem;
+      font-weight: bold;
+    }
+
+    .three-container {
+      display: flex;
+      justify-content: center;
+      padding-top: 3.77rem;
+      padding-bottom: 3.77rem;
+    }
+
+    .three-box {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .three, .three-p {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: .77rem;
+
+    }
+
+
+    .info-box {
+      display: flex;
+      flex-direction: column;
+
+    }
+
+    .info {
+      min-width: 100%;
+
+    }
+
+    .title-info {
+      min-width: 100%;
+      display: flex;
+      justify-content: center;
+
+    }
+
+    .info-p {
+      font-size: 0.77rem;
+      width: 50%;
+
+    }
+
+
+}
+
+
+
+
 /* Three */
 .three, .three-p {
   display: flex;
@@ -120,4 +214,6 @@ li {
 }
 
 /* Footer */
-footer {}
+footer {
+  background-color: cadetblue;
+}
